--- a/templates/_components/product-variant-switcher.twig
+++ b/templates/_components/product-variant-switcher.twig
@@ -22,6 +22,7 @@ Selected Variant:
 
 <button sprig s-method="post" s-action="commerce/cart/update-cart"
         s-val:purchasable-id="{{ selectedVariant.id }}"
+        class="sprig-component"
 >
     Add to Cart
 </button>
